# django-docker-sample

./: .gitignore  .readthedocs.yaml  README.md  docker-compose.prod.yml  pyproject.toml
docker/: .env.dev  .env.prod
docker/app/: Dockerfile
docker/db/conf.d/: my.conf
docker/web/conf.d/: default.conf
docs/source/: app-docker.rst  app.rst  conf.py  db-config.rst  db-docker.rst  environment.rst  index.rst  web.rst
docs/source/code/: docker-compose.dev1.yml  docker-compose.dev2.yml  docker-compose.dev3.yml
mysite/mysite/: settings.py
