[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["driller"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
mysqlclient = "^2.2.0"
gunicorn = "^21.2.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
myst-parser = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
